Switch to JUnit native